--- a/test/mod1/index.html
+++ b/test/mod1/index.html
@@ -12,6 +12,7 @@
     </li>
   </ul>
 
+  <option value="{{this}}" {{@if(this===currentSelect)}} selected="selected"{{/if}}>{{this}}</option> 
+
   <mod2>
 </div>
-
